--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     
     <nav>
       <div class="nav-right" id="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="books.html">Books</a>
-      <a href="research.html">Research</a>
-      <a href="scholar.html" class="active">Article</a>
-      <a href="publish.html">Publish</a>
+      <a href="https://unicorner.uz">Home</a>
+      <a href="https://unicorner.uz/about.html">About</a>
+      <a href="https://book.unicorner.uz">Books</a>
+      <a href="https://research.unicorner.uz">Research</a>
+      <a href="https://publish.unicorner.uz">Publish</a>
     </nav>
   </header>
 
