--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="article-item">
         <a href="articles/dubai.pdf" class="title">Global media and brand Dubai</a>
         <div class="article-meta">Jad Melki • ResearchGate • 2021</div>
-        <a href="articles/dubai.pdf" class="download-btn" target="_blank">Download PDF</a>
+        <a href="articles/article1.pdf" class="download-btn" target="_blank">Download PDF</a>
       </div>
       <div class="article-item">
         <a href="articles/article1.pdf" class="title">Concepts of Economics</a>
