--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
     <div id="articles-container">
       <div class="article-item">
+        <a href="articles/Demertzi_ANYAS09.pdf" class="title">Dualism Persists in the Science of Mind</a>
+        <div class="article-meta">7 authors • Annals of the New York Academy of Sciences • 2021</div>
+        <a href="articles/article1.pdf" class="download-btn" target="_blank">Download PDF</a>
+      </div>
+      <div class="article-item">
         <a href="articles/dubai.pdf" class="title">Global media and brand Dubai</a>
         <div class="article-meta">Jad Melki • ResearchGate • 2021</div>
         <a href="articles/article1.pdf" class="download-btn" target="_blank">Download PDF</a>
