--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="article-item">
         <a href="articles/Demertzi_ANYAS09.pdf" class="title">Dualism Persists in the Science of Mind</a>
         <div class="article-meta">7 authors • Annals of the New York Academy of Sciences • 2021</div>
-        <a href="articles/article1.pdf" class="download-btn" target="_blank">Download PDF</a>
+        <a href="articles/Demertzi_ANYAS09.pdf" class="download-btn" target="_blank">Download PDF</a>
       </div>
       <div class="article-item">
         <a href="articles/dubai.pdf" class="title">Global media and brand Dubai</a>
