--- a/index.html
+++ b/index.html
@@ -227,23 +227,23 @@
       <div id="articleContainer">
         <div class="article-item">
           <div class="article-info">
-            <a href="articles/future-of-ai.pdf" class="title" target="_blank">The Future of AI</a>
-            <p>2023 · Technology · PDF</p>
+            <a href="articles/article1.pdf" class="title" target="_blank">Concepts of Economics 1</a>
+            <p>APonomics · Economics · PDF</p>
           </div>
-          <a href="articles/future-of-ai.pdf" download class="download-btn">Download</a>
+          <a href="articles/article1.pdf" download class="download-btn">Download</a>
         </div>
 
         <div class="article-item">
           <div class="article-info">
-            <a href="articles/green-energy.pdf" class="title" target="_blank">Green Energy Revolution</a>
-            <p>2022 · Environment · PDF</p>
+            <a href="articles/JSMA Research Guide-KAWS.pdf" class="title" target="_blank">How and Why KAWS?</a>
+            <p>University of Oregon · Entertainment · PDF</p>
           </div>
-          <a href="articles/green-energy.pdf" download class="download-btn">Download</a>
+          <a href="articles/JSMA Research Guide-KAWS.pdf" download class="download-btn">Download</a>
         </div>
 
         <div class="article-item">
           <div class="article-info">
-            <a href="articles/global-education.pdf" class="title" target="_blank">Global Education Challenges</a>
+            <a href="articles/Demertzi_ANYAS09.pdf" class="title" target="_blank">Global Education Challenges</a>
             <p>2021 · Education · PDF</p>
           </div>
           <a href="articles/global-education.pdf" download class="download-btn">Download</a>
