--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 
         <div class="article-item">
           <div class="article-info">
-            <a href="articles/Demertzi_ANYAS09.pdf" class="title" target="_blank">Global Education Challenges</a>
-            <p>2021 · Education · PDF</p>
+            <a href="articles/Demertzi_ANYAS09.pdf" class="title" target="_blank">What is Dualism?</a>
+            <p>ResearchGate · Phisolophy · PDF</p>
           </div>
           <a href="articles/global-education.pdf" download class="download-btn">Download</a>
         </div>
