--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
         </div>
         <div class="nav-right" id="navLinks">
           <a href="https://unicorner.uz">Home</a>
-          <a href="https://unicorner.uz/about.html">About</a>
+          <a href="https://unicorner.uz/about">About</a>
           <a href="https://book.unicorner.uz">Books</a>
           <a href="https://research.unicorner.uz">Research</a>
-          <a href="https://publish.unicorner.uz">Publish</a>
+          <a href="https://unicorner.uz/publish">Publish</a>
         </div>
       </nav>
     </header>
